src/styles/tasks/task_card.scss
$card-width: 225px;
$card-height: $card-width * $phi;
$animation-transition: 0.8s ease-out;

.deck-wrapper {

  .card-deck {

    .card {
        -ms-flex: none;
        -webkit-box-flex: none;
        flex: none;
        height: $card-height;
        width: $card-width;
        transition: $transition;
        position: relative;
        margin-left: $card-pull;
        margin-right: 0;
        margin-top: $card-pull / ($phi * $phi * $phi);
        background: transparent;
        border: none;
        z-index: 20;
        top: 0;
        left: 0;

        .card-body {

          padding: 0;

          .front, .back {
              position: absolute;
              left: 0;
              height: $card-height;
              width: $card-width;
              padding: 1.25rem;
              border-radius: 10px;
              box-shadow: -1rem -.25rem 3rem #000;
              background: $midnight-purple;
              -webkit-backface-visibility: hidden;
              backface-visibility: hidden;
              transform-style: preserve-3d;
              transition: $transition;
          }

          .front {
            position: absolute;
            left: 0;
            transform: rotateY(0);

            .symbol {
              position: absolute;
              height: 60px;
              left: 0px;
              top: 0;
              transform: translate(-37%,-37%);
            }

            .task-notes {
              white-space: pre-line;
            }
          }

          .back {
            position: fixed;
            top: 50%;
            left: 50%;
            box-shadow: 0 0 2rem $magic-orange;
            text-shadow: 0 0 2rem $magic-orange;
            transform: translate(-50%,-50%) rotateY(180deg);
          }
        }


        &:hover {
            top: -20px;
            transition: $transition;
            width: $card-width - $card-pull;
            cursor: pointer;

            .front {
              box-shadow: 0 0 2rem $magic-orange;
              text-shadow: 0 0 2rem $magic-orange;
            }
        }


        &.chosen {

          animation: card-chosen $animation-transition forwards;
          cursor: auto;

          .card-body {

            .front {

              animation: front-chosen $animation-transition forwards;
            }

            .back {

              animation: back-chosen $animation-transition forwards;
            }
          }
        }

        &.unchosen {

          animation: card-unchosen $animation-transition;

          .front {
            animation: front-unchosen $animation-transition;
          }

          .back {
            animation: back-unchosen $animation-transition;
          }
        }

        &.completed {

          .front, .back {
            background: $blood-red;
            color: $magic-orange;

            .btn {
              background-color: $gold;
              border-color: $gold;
              color: $blood-red;

              &:hover {
                background-color: $gold;
                border-color: $gold;
                color: $blood-red;
              }
            }
          }
        }
    }
  }
}

@keyframes card-chosen {
  0% {
    top: -20px;
    width: $card-width - $card-pull;
  }
  63% {
    top: -70px;
    width: $card-width - $card-pull;
  }
  100% {
    top: -70px;
    width: $card-width - $card-pull;
    z-index: 100;
  }
}

@keyframes front-chosen {
  0% {
    left: 0;
    box-shadow: 0 0 2rem $magic-orange;
    text-shadow: 0 0 2rem $magic-orange;
  }
  63% {
    left: -66px;
    box-shadow: 0 0 2rem $magic-orange;
    text-shadow: 0 0 2rem $magic-orange;
  }
  64%, 100% {
    left: -66px;
    transform: rotateY(180deg);
    box-shadow: 0 0 2rem $magic-orange;
    text-shadow: 0 0 2rem $magic-orange;
  }
}

@keyframes back-chosen {
  0% {
    transform: translate(-50%,-50%) rotateY(180deg);
    width: $card-width;
    height: $card-height;
  }
  64%, 100% {
    transform: translate(-50%,-50%) rotateY(0deg);
    width: $card-width * 2;
    height: $card-height * 2;
    max-width: 90%;
    max-height: 90%;
  }
}

@keyframes card-unchosen {
  0% {
    top: -70px;
    width: $card-width - $card-pull;
    z-index: 100;
  }
  25% {
    top: -70px;
    width: $card-width - $card-pull;
    z-index: 20;
  }
  100% {
    top: 0px;
    width: $card-width;
  }
}

@keyframes front-unchosen {
  0% {
    left: -66px;
    transform: rotateY(180deg);
    box-shadow: 0 0 2rem $magic-orange;
    text-shadow: 0 0 2rem $magic-orange;
  }
  25% {
    left: -66px;
    transform: rotateY(0deg);
    box-shadow: 0 0 2rem $magic-orange;
    text-shadow: 0 0 2rem $magic-orange;
  }
  100% {
    left: 0;
    transform: rotateY(0deg);
  }
}

@keyframes back-unchosen {
  0% {
    transform: translate(-50%,-50%) rotateY(0deg);
    width: $card-width * 2;
    height: $card-height * 2;
    max-width: 90%;
    max-height: 90%;
  }
  25% {
    transform: translate(-50%,-50%) rotateY(180deg);
    width: $card-width;
    height: $card-height;
  }
  100% {
    transform: translate(-50%,-50%) rotateY(180deg);
    width: $card-width;
    height: $card-height;
  }
}

